# chime-frb-open-data.github.io

./: 404.html  README.md  _config.yml  bandpass.html  catalog.html  code.html  data-formats.html  data-releases.html  exposure.html  index.html  localization.html  mkdocs.yml  pyproject.toml  scientific.html  sitemap.xml  technical.html  waterfall.html
.github/workflows/: docs.yml
beam-model/: index.html
catalog/: index.html
code/: index.html
data-formats/: index.html
data-releases/: index.html
docs/: beam-model.md  catalog.md  code.md  data-formats.md  data-releases.md  exposure.md  index.md  injections.md  localization.md  readCatalog.md  readExposure.md  support.md  voevents-faq.md  voevents.md  waterfall.md
docs/notebooks/: chimefrb_voevent_tutorial.ipynb
docs/static/: FRB-DETECTION-2021-08-19-21:50:28.900992UTC+0000_7f17d982b315.xml  OBS-RETRACTION-2021-09-07-09:49:11.821703UTC+0000_65550c2c8d65.xml
exposure/: index.html
injections/: index.html
localization/: index.html
scientific/: index.html
search/: search_index.json
static/: FRB-SUBSEQUENT-2021-08-22-23:16:06.571791UTC+0000_f4a33adeaa19.xml
technical/: index.html
voevents/: index.html
voevents-faq/: index.html
waterfall/: index.html
