[tool.poetry]
name = "chime-frb-open-data.github.io"
version = "2021.10"
description = "CHIME/FRB Open Data"
authors = ["Shiny Brar <charanjotbrar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.3.3"
mkdocs-jupyter = "^0.18.0"
voevent-parse = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
